--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
-    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/core": "^7.8.4",
+    "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.8",
+    "@react-navigation/stack": "^7.2.9",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "zustand": "^5.0.3"
   },
