--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
