--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
@@ -21,6 +22,7 @@
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-picker-select": "^9.3.1",
