--- a/package.json
+++ b/package.json
@@ -9,31 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/core": "^7.8.4",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.8",
     "@react-navigation/stack": "^7.2.9",
+    "@stripe/stripe-react-native": "^0.44.0",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-paper": "^5.13.1",
+    "react-native-paypal": "^4.1.0",
+    "react-native-paypal-lib": "^1.0.9",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.3",
-    "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native-webview": "^13.13.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
